<resources>
    <string name="application_name">Courier Selection</string>
    <string name="content_splash_screen_title">Courier Selection</string>
    <string name="title_activity_dashboard">Courier Selection</string>
    <string name="content_dashboard_item_textview_label_fleet">Armada</string>
    <string name="content_dashboard_item_textview_label_coverage">Jangkauan</string>
    <string name="content_dashboard_item_textview_label_experience">Pengalaman</string>
    <string name="content_dashboard_item_textview_label_cost">Harga</string>
    <string name="content_dashboard_item_textview_label_time">Waktu</string>
    <string name="content_dashboard_item_textview_label_packaging">Kemasan</string>
    <string name="content_dashboard_item_imagebutton_edit">Edit</string>
    <string name="content_dashboard_item_imagebutton_hide">Sembunyikan</string>
    <string name="content_dashboard_item_imagebutton_delete">Hapus</string>
    <string name="dashboard_menu_add_title">Tambah</string>
    <string name="dashboard_menu_hide_title">Tersembunyi</string>
    <string name="dashboard_menu_hide_weight">Bobot</string>
    <string name="title_activity_add_alternative">Tambah Alternatif</string>
    <string name="content_add_alternative_name_hint">Nama Alternatif</string>
    <string name="content_add_alternative_textview_fleet">Jenis Armada</string>
    <string name="content_add_alternative_textview_coverage">Jangkauan</string>
    <string name="content_add_alternative_textview_experience">Pengalaman Perusahaan</string>
    <string name="content_add_alternative_textview_cost">Harga</string>
    <string name="content_add_alternative_textview_time">Waktu Pengiriman</string>
    <string name="content_add_alternative_textview_packaging">Hasil Packing/Kemasan</string>
    <string name="title_activity_update_alternative">Update Alternatif</string>
    <string name="content_update_alternative_name_hint">Nama Alternatif</string>
    <string name="content_update_alternative_textview_fleet">Jenis Armada</string>
    <string name="content_update_alternative_textview_coverage">Jangkauan</string>
    <string name="content_update_alternative_textview_experience">Pengalaman Perusahaan</string>
    <string name="content_update_alternative_textview_cost">Harga</string>
    <string name="content_update_alternative_textview_time">Waktu Pengiriman</string>
    <string name="content_update_alternative_textview_packaging">Hasil Packing/Kemasan</string>
    <string name="title_activity_alternative_hider">Alternatif Tersembunyi</string>
    <string name="content_alternative_hider_item_textview_label_fleet">Armada</string>
    <string name="content_alternative_hider_item_textview_label_coverage">Jangkauan</string>
    <string name="content_alternative_hider_item_textview_label_experience">Pengalaman</string>
    <string name="content_alternative_hider_item_textview_label_cost">Harga</string>
    <string name="content_alternative_hider_item_textview_label_time">Waktu</string>
    <string name="content_alternative_hider_item_textview_label_packaging">Kemasan</string>
    <string name="content_alternative_hider_item_imagebutton_unhide">Tampilkan</string>
    <string name="content_alternative_hider_item_imagebutton_delete">Hapus</string>
    <string name="title_activity_weight_modifier">Modifikasi Bobot</string>
    <string name="content_weight_modifier_fleet_hint">Jenis Armada</string>
    <string name="content_weight_modifier_coverage_hint">Jangkauan</string>
    <string name="content_weight_modifier_experience_hint">Pengalaman Perusahan</string>
    <string name="content_weight_modifier_cost_hint">Harga</string>
    <string name="content_weight_modifier_time_hint">Waktu Pengiriman</string>
    <string name="content_weight_modifier_packaging_hint">Hasil Packing/Kemasan</string>
    <string name="content_weight_modifier_chart_label_fleet">Armada</string>
    <string name="content_weight_modifier_chart_label_coverage">Jangkauan</string>
    <string name="content_weight_modifier_chart_label_experience">Pengalaman</string>
    <string name="content_weight_modifier_chart_label_cost">Harga</string>
    <string name="content_weight_modifier_chart_label_time">Waktu</string>
    <string name="content_weight_modifier_chart_label_packaging">Kemasan</string>
    <string name="title_activity_rangking_result">Hasil Ranking</string>
    <string name="content_ranking_result_item_textview_label_fleet">Armada</string>
    <string name="content_ranking_result_item_textview_label_coverage">Jangkauan</string>
    <string name="content_ranking_result_item_textview_label_experience">Pengalaman</string>
    <string name="content_ranking_result_item_textview_label_cost">Harga</string>
    <string name="content_ranking_result_item_textview_label_time">Waktu</string>
    <string name="content_ranking_result_item_textview_label_packaging">Kemasan</string>
    <string name="word_ranking">Ranking</string>
</resources>
