<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/content_dashboard_item_swipelayout_swipe"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--What you want to show-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </TableLayout>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="6dp"
            >
            <!--What you want to show in SurfaceView-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_fleet"
                    android:textSize="8sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_coverage"
                    android:textSize="8sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_knowledge"
                    android:textSize="8sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_cost"
                    android:textSize="8sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_time"
                    android:textSize="8sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:text="@string/content_dashboard_item_textview_label_packaging"
                    android:textSize="8sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_fleet"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:indeterminate="false"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_coverage"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_knowledge"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:indeterminate="false"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_cost"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_time"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:indeterminate="false"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>

                <ProgressBar
                    android:id="@+id/content_dashboard_item_progressbar_packaging"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/content_dashboard_item_textview_fleet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/content_dashboard_item_textview_coverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/content_dashboard_item_textview_knowledge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/content_dashboard_item_textview_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/content_dashboard_item_textview_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

                <TextView
                    android:id="@+id/content_dashboard_item_textview_packaging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:textSize="8sp"/>

            </LinearLayout>

        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>

</LinearLayout>